--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <head></head>
   <body>
     <div><h1>Привет ;)</h1></div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/NW0fswxY_Uk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
