--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body>
-  <div><h1>Breathe, Be Happy - Tep No</h1>
-    <p>I want you to breathe with me</br>
-       And be happy<br>
-       Where will we go?<br>
-       All the sad songs will leave us down this road<br>
-       Say you’re mine, say you’re mine<br>
-       And I’ll be fine, I’ll be fine
-    </p>
-  </div>
-  </body>
+    <head>
+        <title>hey</title>
+        <link rel="stylesheet" href="styless.css">
+    </head>
+    <body>
+        <img src="kya.jpg" height="200px" style="position: absolute; right: 0px;">
+        <div class="heart"></div>
+    </body>
 </html>
