--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <img src="kya.jpg" height="200px" style="position: absolute; right: 0px;">
-        <div class="heart"></div>
+        <div class="hear"></div>
     </body>
 </html>
