--- a/index.html
+++ b/index.html
@@ -6,6 +6,54 @@
     </head>
     <body>
         <img src="kya.jpg" height="200px" style="position: absolute; right: 0px;">
-        <div class="hear"></div>
+        <div class="heart"></div>
+        <div id="car-container"></div>
+        <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+        <script>
+            const scene = new THREE.Scene();
+            const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            const renderer = new THREE.WebGLRenderer({ antialias: true });
+            renderer.setSize(600, 400);
+            document.getElementById('car-container').appendChild(renderer.domElement);
+
+            const ambientLight = new THREE.AmbientLight(0xffffff, 0.7);
+            scene.add(ambientLight);
+            const dirLight = new THREE.DirectionalLight(0xffffff, 0.8);
+            dirLight.position.set(5, 10, 7.5);
+            scene.add(dirLight);
+
+            const car = new THREE.Group();
+            const bodyGeom = new THREE.BoxGeometry(4, 1, 2);
+            const bodyMat = new THREE.MeshPhongMaterial({ color: 0x00ffff });
+            const body = new THREE.Mesh(bodyGeom, bodyMat);
+            body.position.y = 0.5;
+            car.add(body);
+
+            const roofGeom = new THREE.BoxGeometry(2, 0.5, 1.5);
+            const roofMat = new THREE.MeshPhongMaterial({ color: 0xff00ff });
+            const roof = new THREE.Mesh(roofGeom, roofMat);
+            roof.position.set(-0.5, 1.0, 0);
+            car.add(roof);
+
+            const wheelGeom = new THREE.CylinderGeometry(0.4, 0.4, 0.6, 20);
+            const wheelMat = new THREE.MeshPhongMaterial({ color: 0x000000 });
+            for (let x of [-1.5, 1.5]) {
+                for (let z of [-1, 1]) {
+                    const wheel = new THREE.Mesh(wheelGeom, wheelMat);
+                    wheel.rotation.z = Math.PI / 2;
+                    wheel.position.set(x, 0.4, z);
+                    car.add(wheel);
+                }
+            }
+
+            scene.add(car);
+            camera.position.z = 8;
+            const animate = function () {
+                requestAnimationFrame(animate);
+                car.rotation.y += 0.01;
+                renderer.render(scene, camera);
+            };
+            animate();
+        </script>
     </body>
 </html>
