Add API and docs pages with backend script

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="styless.css">
     </head>
     <body>
+        <nav class="main-nav">
+            <a href="index.html">Home</a>
+            <a href="api.html">API Logs</a>
+            <a href="docs.html">Docs</a>
+        </nav>
         <main class="container">
             <img src="kya.jpg" alt="Image" class="banner">
             <div class="heart"></div>
