Add simple UML diagram

--- a/docs.html
+++ b/docs.html
@@ -28,7 +28,7 @@
     <div id="uml-overlay" class="uml-overlay">
         <div class="uml-window">
             <h2>UML Diagram</h2>
-            <p>Diagram will appear here.</p>
+            <img src="uml-diagram.svg" alt="UML diagram" class="uml-img">
             <button onclick="toggleUml()">Close</button>
         </div>
     </div>
