--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <nav class="main-nav">
             <a href="index.html">Home</a>
             <a href="api.html">API Logs</a>
+            <a href="fail2ban.html">Fail2Ban</a>
             <a href="docs.html">Docs</a>
             <a href="#" onclick="toggleUml()">UML</a>
         </nav>
