--- a/docs.html
+++ b/docs.html
@@ -9,6 +9,7 @@
     <nav class="main-nav">
         <a href="index.html">Home</a>
         <a href="api.html">API Logs</a>
+        <a href="fail2ban.html">Fail2Ban</a>
         <a href="docs.html">Docs</a>
         <a href="#" onclick="toggleUml()">UML</a>
     </nav>
@@ -23,6 +24,12 @@
             <h2>API Logs Page</h2>
             <p>The <em>Error Logs</em> button fetches backend error logs.</p>
             <p>The <em>Access Logs</em> button retrieves access logs from the server.</p>
+        </section>
+        <section>
+            <h2>Fail2Ban Page</h2>
+            <p>The <em>Jail Status</em> button shows active jails.</p>
+            <p>The <em>Banned IPs</em> button lists blocked addresses.</p>
+            <p>The UML overlay on this page displays <code>fail2ban-uml.svg</code>.</p>
         </section>
     </main>
     <div id="uml-overlay" class="uml-overlay">
