Add CUDA support docs and update UML

--- a/docs.html
+++ b/docs.html
@@ -24,6 +24,10 @@
             <p>The <em>Error Logs</em> button fetches backend error logs.</p>
             <p>The <em>Access Logs</em> button retrieves access logs from the server.</p>
         </section>
+        <section>
+            <h2>GPU Support</h2>
+            <p>Complex calculations may use the <a href="https://github.com/NVIDIA/cuda-python">cuda-python</a> library.</p>
+        </section>
     </main>
     <div id="uml-overlay" class="uml-overlay">
         <div class="uml-window">
