Add JSDoc documentation and update docs

--- a/api.html
+++ b/api.html
@@ -11,6 +11,7 @@
         <a href="api.html">API Logs</a>
         <a href="fail2ban.html">Fail2Ban</a>
         <a href="docs.html">Docs</a>
+        <a href="jsdoc/index.html">JSDoc</a>
         <a href="#" onclick="toggleUml()">UML</a>
     </nav>
     <main class="container">
