--- a/docs.html
+++ b/docs.html
@@ -11,6 +11,7 @@
         <a href="api.html">API Logs</a>
         <a href="fail2ban.html">Fail2Ban</a>
         <a href="docs.html">Docs</a>
+        <a href="jsdoc/index.html">JSDoc</a>
         <a href="#" onclick="toggleUml()">UML</a>
     </nav>
     <main class="container">
@@ -34,6 +35,10 @@
         <section>
             <h2>GPU Support</h2>
             <p>Complex calculations may use the <a href="https://github.com/NVIDIA/cuda-python">cuda-python</a> library.</p>
+        </section>
+        <section>
+            <h2>JSDoc</h2>
+            <p>JavaScript functions are documented with <a href="https://jsdoc.app/">JSDoc</a>. Generated pages are available via the <em>JSDoc</em> menu link.</p>
         </section>
         <section>
             <h2>Manual Tests</h2>
