--- a/docs.html
+++ b/docs.html
@@ -8,7 +8,7 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="mdl-layout mdl-js-layout">
+<body class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <div id="header-placeholder"></div>
     <main class="mdl-layout__content container">
         <h1>API Documentation</h1>
@@ -46,8 +46,14 @@
     </div>
     <div id="footer-placeholder"></div>
     <script>
-        fetch('header.html').then(r=>r.text()).then(t=>document.getElementById('header-placeholder').innerHTML=t);
-        fetch('footer.html').then(r=>r.text()).then(t=>document.getElementById('footer-placeholder').innerHTML=t);
+        fetch('header.html').then(r=>r.text()).then(t => {
+            document.getElementById('header-placeholder').innerHTML = t;
+            if (window.componentHandler) componentHandler.upgradeDom();
+        });
+        fetch('footer.html').then(r=>r.text()).then(t => {
+            document.getElementById('footer-placeholder').innerHTML = t;
+            if (window.componentHandler) componentHandler.upgradeDom();
+        });
         function toggleUml() {
             const overlay = document.getElementById('uml-overlay');
             overlay.style.display = overlay.style.display === 'block' ? 'none' : 'block';
