--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
+        <meta charset="UTF-8">
         <title>hey</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
-        <nav class="main-nav">
-            <a href="index.html">Home</a>
-            <a href="api.html">API Logs</a>
-            <a href="fail2ban.html">Fail2Ban</a>
-            <a href="docs.html">Docs</a>
-            <a href="#" onclick="toggleUml()">UML</a>
-        </nav>
-        <main class="container">
+    <body class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <div id="header-placeholder"></div>
+        <main class="mdl-layout__content container">
             <img src="https://via.placeholder.com/600x300?text=Banner" alt="Image" class="banner">
             <div class="heart"></div>
             <div id="car-container"></div>
@@ -25,8 +22,20 @@
                 <button onclick="toggleUml()">Close</button>
             </div>
         </div>
+        <div id="footer-placeholder"></div>
         <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
         <script>
+            fetch('header.html').then(r => r.text()).then(t => {
+                const holder = document.getElementById('header-placeholder');
+                holder.outerHTML = t;
+                const layout = document.querySelector('.mdl-layout');
+                if (layout) layout.classList.remove('is-upgraded');
+                if (window.componentHandler) componentHandler.upgradeDom();
+            });
+            fetch('footer.html').then(r=>r.text()).then(t => {
+                document.getElementById('footer-placeholder').outerHTML = t;
+                if (window.componentHandler) componentHandler.upgradeDom();
+            });
             const scene = new THREE.Scene();
             const camera = new THREE.PerspectiveCamera(75, 1, 0.1, 1000);
             const renderer = new THREE.WebGLRenderer({ antialias: true });
