--- a/fail2ban.html
+++ b/fail2ban.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
+    <meta charset="UTF-8">
     <title>Fail2Ban Logs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <nav class="main-nav">
-        <a href="index.html">Home</a>
-        <a href="api.html">API Logs</a>
-        <a href="fail2ban.html">Fail2Ban</a>
-        <a href="docs.html">Docs</a>
-        <a href="#" onclick="toggleUml()">UML</a>
-    </nav>
-    <main class="container">
+<body class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <div id="header-placeholder"></div>
+    <main class="mdl-layout__content container">
         <h1>Fail2Ban Logs</h1>
         <ul id="log-menu">
             <li><button onclick="showLog('jail')">Jail Status</button></li>
@@ -39,6 +36,27 @@
             overlay.style.display =
                 overlay.style.display === 'block' ? 'none' : 'block';
         }
+    </script>
+    <div id="footer-placeholder"></div>
+    <script>
+        function upgradeMdl() {
+            const layout = document.querySelector('.mdl-layout');
+            if (window.componentHandler && layout) {
+                layout.classList.remove('is-upgraded');
+                window.componentHandler.upgradeDom();
+            } else {
+                setTimeout(upgradeMdl, 50);
+            }
+        }
+
+        fetch('header.html').then(r => r.text()).then(t => {
+            document.getElementById('header-placeholder').outerHTML = t;
+            upgradeMdl();
+        });
+        fetch('footer.html').then(r => r.text()).then(t => {
+            document.getElementById('footer-placeholder').outerHTML = t;
+            upgradeMdl();
+        });
     </script>
 </body>
 </html>
