--- a/docs.html
+++ b/docs.html
@@ -46,8 +46,9 @@
     </div>
     <div id="footer-placeholder"></div>
     <script>
-        fetch('header.html').then(r=>r.text()).then(t => {
-            document.getElementById('header-placeholder').innerHTML = t;
+            fetch('header.html').then(r => r.text()).then(t => {
+            const placeholder = document.getElementById('header-placeholder');
+            placeholder.outerHTML = t;
             if (window.componentHandler) componentHandler.upgradeDom();
         });
         fetch('footer.html').then(r=>r.text()).then(t => {
