--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <div id="footer-placeholder"></div>
         <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
         <script>
-            fetch('header.html').then(r=>r.text()).then(t => {
-                document.getElementById('header-placeholder').innerHTML = t;
+            fetch('header.html').then(r => r.text()).then(t => {
+                const placeholder = document.getElementById('header-placeholder');
+                placeholder.outerHTML = t;
                 if (window.componentHandler) componentHandler.upgradeDom();
             });
             fetch('footer.html').then(r=>r.text()).then(t => {
