--- a/json_intro.html
+++ b/json_intro.html
@@ -27,10 +27,11 @@
 </main>
 <div id="footer-placeholder"></div>
 <script>
-  fetch('header.html').then(r=>r.text()).then(t => {
-    document.getElementById('header-placeholder').innerHTML = t;
-    if (window.componentHandler) componentHandler.upgradeDom();
-  });
+            fetch('header.html').then(r => r.text()).then(t => {
+            const placeholder = document.getElementById('header-placeholder');
+            placeholder.outerHTML = t;
+            if (window.componentHandler) componentHandler.upgradeDom();
+        });
   fetch('footer.html').then(r=>r.text()).then(t => {
     document.getElementById('footer-placeholder').innerHTML = t;
     if (window.componentHandler) componentHandler.upgradeDom();
