--- a/docs.html
+++ b/docs.html
@@ -46,10 +46,18 @@
     </div>
     <div id="footer-placeholder"></div>
     <script>
-        fetch('header.html').then(r=>r.text()).then(t => {
-            document.getElementById('header-placeholder').innerHTML = t;
-            if (window.componentHandler) componentHandler.upgradeDom();
-        });
+            fetch('header.html').then(r => r.text()).then(t => {
+                const placeholder = document.getElementById('header-placeholder');
+                placeholder.outerHTML = t;
+                if (window.componentHandler) {
+                    const layout = document.querySelector('.mdl-layout');
+                    if (layout) {
+                        layout.classList.remove('is-upgraded');
+                        layout.removeAttribute('data-upgraded');
+                        componentHandler.upgradeElement(layout);
+                    }
+                }
+            });
         fetch('footer.html').then(r=>r.text()).then(t => {
             document.getElementById('footer-placeholder').innerHTML = t;
             if (window.componentHandler) componentHandler.upgradeDom();
