--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <div class="mdl-layout__header-row">
     <span class="mdl-layout-title">Проект</span>
     <div class="mdl-layout-spacer"></div>
-    <nav class="mdl-navigation">
+    <nav class="mdl-navigation mdl-layout--large-screen-only">
       <a class="mdl-navigation__link" href="index.html">Home</a>
       <a class="mdl-navigation__link" href="api.html">API Logs</a>
       <a class="mdl-navigation__link" href="fail2ban.html">Fail2Ban</a>
