--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <title>hey</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+        <link rel="stylesheet" href="material.min.css">
+        <script defer src="material.min.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <div id="header-placeholder"></div>
         <main class="mdl-layout__content container">
-            <img src="https://via.placeholder.com/600x300?text=Banner" alt="Image" class="banner">
+            <img src="banner.svg" alt="Image" class="banner">
             <div class="heart"></div>
             <div id="car-container"></div>
         </main>
@@ -104,9 +104,9 @@
             animate();
             function toggleUml() {
                 const overlay = document.getElementById('uml-overlay');
-                overlay.style.display = overlay.style.display === 'block'
+                overlay.style.display = overlay.style.display === 'flex'
                     ? 'none'
-                    : 'block';
+                    : 'flex';
             }
         </script>
     </body>
