--- a/plan.html
+++ b/plan.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Development Plan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="material.min.css">
+    <script defer src="material.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -63,7 +63,7 @@
         });
         function toggleUml() {
             const overlay = document.getElementById('uml-overlay');
-            overlay.style.display = overlay.style.display === 'block' ? 'none' : 'block';
+            overlay.style.display = overlay.style.display === 'flex' ? 'none' : 'flex';
         }
     </script>
 </body>
