Обновлена документация и UML

--- a/docs.html
+++ b/docs.html
@@ -34,7 +34,7 @@
         </section>
         <section>
             <h2>Manual Tests</h2>
-            <p>Check each page loads correctly and the UML overlay appears when clicking the <em>UML</em> menu item. Verify links to Fail2Ban logs and GPU info work as expected.</p>
+            <p>Подробные чек‑листы расположены в файле <a href="docs/manual_tests.md">manual_tests.md</a>.</p>
         </section>
     </main>
     <div id="uml-overlay" class="uml-overlay">
