--- a/modules.html
+++ b/modules.html
@@ -25,6 +25,7 @@
 5. **GPU** – вычислительные функции с применением библиотеки [cuda-python](https://github.com/NVIDIA/cuda-python).
 6. **Tests** – модульные тесты, такие как `test_backend_tools.py`, проверяющие отдельные функции без участия пользовательского интерфейса.
 7. **Documentation** – файлы с описанием API и планом развития проекта (`docs.html`, `development_plan.md`).
+8. **Manual** – шаблоны и инструкции для ручных проверок (`templates/`, `docs/manual_tests.md`).
 
 Такое разделение позволит развивать каждую часть проекта независимо и делать код более поддерживаемым.
         </pre>
