Добавлена страница контроля проекта

--- a/header.html
+++ b/header.html
@@ -9,6 +9,7 @@
       <a class="mdl-navigation__link" href="docs.html">Docs</a>
       <a class="mdl-navigation__link" href="modules.html">Modules</a>
       <a class="mdl-navigation__link" href="plan.html">Plan</a>
+      <a class="mdl-navigation__link" href="control.html">Control</a>
       <a class="mdl-navigation__link" href="crossref.html">Crossrefs</a>
       <a class="mdl-navigation__link" href="json_intro.html">JSON Schema</a>
       <a class="mdl-navigation__link" href="#" onclick="toggleUml()">UML</a>
@@ -24,6 +25,7 @@
     <a class="mdl-navigation__link" href="docs.html">Docs</a>
     <a class="mdl-navigation__link" href="modules.html">Modules</a>
     <a class="mdl-navigation__link" href="plan.html">Plan</a>
+    <a class="mdl-navigation__link" href="control.html">Control</a>
     <a class="mdl-navigation__link" href="crossref.html">Crossrefs</a>
     <a class="mdl-navigation__link" href="json_intro.html">JSON Schema</a>
     <a class="mdl-navigation__link" href="#" onclick="toggleUml()">UML</a>
