--- a/header.html
+++ b/header.html
@@ -11,6 +11,7 @@
       <a class="mdl-navigation__link" href="plan.html">Plan</a>
       <a class="mdl-navigation__link" href="control.html">Control</a>
       <a class="mdl-navigation__link" href="crossref.html">Crossrefs</a>
+      <a class="mdl-navigation__link" href="login.html">Login</a>
       <a class="mdl-navigation__link" href="json_intro.html">JSON Schema</a>
       <a class="mdl-navigation__link" href="#" onclick="toggleUml()">UML</a>
     </nav>
@@ -27,6 +28,7 @@
     <a class="mdl-navigation__link" href="plan.html">Plan</a>
     <a class="mdl-navigation__link" href="control.html">Control</a>
     <a class="mdl-navigation__link" href="crossref.html">Crossrefs</a>
+    <a class="mdl-navigation__link" href="login.html">Login</a>
     <a class="mdl-navigation__link" href="json_intro.html">JSON Schema</a>
     <a class="mdl-navigation__link" href="#" onclick="toggleUml()">UML</a>
   </nav>
