--- a/modules.html
+++ b/modules.html
@@ -21,7 +21,7 @@
    Отдельная страница `fail2ban.html` показывает логи Fail2Ban.
 2. **Style** – общие таблицы стилей (`styles.css`), оформляющие внешний вид всех страниц.
 3. **Scripts** – клиентские скрипты для анимаций и вспомогательных функций. При необходимости могут быть вынесены в отдельные JS‑модули.
-4. **Backend** – логика работы с сервером, включающая `backend_tools.py` и возможные вспомогательные модули (например, `ssh_utils.py`, `http_utils.py`).
+4. **Backend** – логика работы с сервером. Сюда входят `backend_tools.py`, управление учётными записями (`auth_manager.py`) и утилита тестирования `account_tester.py`.
 5. **GPU** – вычислительные функции с применением библиотеки [cuda-python](https://github.com/NVIDIA/cuda-python).
 6. **Tests** – модульные тесты, такие как `test_backend_tools.py`, проверяющие отдельные функции без участия пользовательского интерфейса.
 7. **Documentation** – файлы с описанием API и планом развития проекта (`docs.html`, `development_plan.md`).
