--- a/index.html
+++ b/index.html
@@ -23,24 +23,9 @@
             </div>
         </div>
         <div id="footer-placeholder"></div>
+        <script src="load_layout.js" data-base="./"></script>
         <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
         <script>
-            fetch('header.html').then(r => r.text()).then(t => {
-                const placeholder = document.getElementById('header-placeholder');
-                placeholder.outerHTML = t;
-                if (window.componentHandler) {
-                    const layout = document.querySelector('.mdl-layout');
-                    if (layout) {
-                        layout.classList.remove('is-upgraded');
-                        layout.removeAttribute('data-upgraded');
-                        componentHandler.upgradeElement(layout);
-                    }
-                }
-            });
-            fetch('footer.html').then(r => r.text()).then(t => {
-                document.getElementById('footer-placeholder').outerHTML = t;
-                upgradeMdl();
-            });
             const scene = new THREE.Scene();
             const camera = new THREE.PerspectiveCamera(75, 1, 0.1, 1000);
             const renderer = new THREE.WebGLRenderer({ antialias: true });
