--- a/login.html
+++ b/login.html
@@ -44,16 +44,8 @@
         </div>
     </div>
     <div id="footer-placeholder"></div>
+    <script src="load_layout.js" data-base="./"></script>
     <script>
-        fetch('header.html').then(r => r.text()).then(t => {
-            const placeholder = document.getElementById('header-placeholder');
-            placeholder.outerHTML = t;
-            if (window.componentHandler) componentHandler.upgradeDom();
-        });
-        fetch('footer.html').then(r => r.text()).then(t => {
-            document.getElementById('footer-placeholder').innerHTML = t;
-            if (window.componentHandler) componentHandler.upgradeDom();
-        });
         function toggleUml() {
             const overlay = document.getElementById('uml-overlay');
             overlay.style.display = overlay.style.display === 'flex' ? 'none' : 'flex';
