Add Django hosting info

--- a/docs.html
+++ b/docs.html
@@ -33,6 +33,10 @@
             <p>Complex calculations may use the <a href="https://github.com/NVIDIA/cuda-python">cuda-python</a> library.</p>
         </section>
         <section>
+            <h2>Django Hosting</h2>
+            <p>Сайт можно разместить как приложение Django: перенесите файлы в каталог <code>static</code>, а HTML подключите как шаблоны.</p>
+        </section>
+        <section>
             <h2>Manual Tests</h2>
             <p>Подробные чек‑листы расположены в файле <a href="docs/manual_tests.md">manual_tests.md</a>.</p>
         </section>
