Исправлена ссылка на инструкции и кнопка UML

--- a/docs.html
+++ b/docs.html
@@ -38,7 +38,7 @@
         </section>
         <section>
             <h2>Manual Tests</h2>
-            <p>Подробные чек‑листы расположены в файле <a href="docs/manual_tests.md">manual_tests.md</a>.</p>
+            <p>Подробные чек‑листы расположены в файле <a href="docs/manual_tests.html">manual_tests.html</a>.</p>
         </section>
     </main>
     <div id="uml-overlay" class="uml-overlay">
