--- a/plan.html
+++ b/plan.html
@@ -31,7 +31,7 @@
 
 ## Ручные тесты
 
-- Подробный список проверок описан в файле <a href="docs/manual_tests.md">manual_tests.md</a>.
+ - Подробный список проверок описан в файле <a href="docs/manual_tests.html">manual_tests.html</a>.
 - Открыть каждую страницу и убедиться, что ссылки работают и UML-диаграмма отображается корректно.
 - На странице Fail2Ban проверить вывод разделов «Jail Status» и «Banned IPs».
 - Выполнить функцию выборки устройств CUDA для проверки работы `cuda-python`.
