--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
       <a class="mdl-navigation__link" href="crossref.html">Crossrefs</a>
       <a class="mdl-navigation__link" href="login.html">Login</a>
       <a class="mdl-navigation__link" href="json_intro.html">JSON Schema</a>
-      <a class="mdl-navigation__link" href="#" onclick="toggleUml()">UML</a>
+      <a class="mdl-navigation__link uml-link" href="#">UML</a>
     </nav>
   </div>
 </header>
@@ -30,6 +30,6 @@
     <a class="mdl-navigation__link" href="crossref.html">Crossrefs</a>
     <a class="mdl-navigation__link" href="login.html">Login</a>
     <a class="mdl-navigation__link" href="json_intro.html">JSON Schema</a>
-    <a class="mdl-navigation__link" href="#" onclick="toggleUml()">UML</a>
+    <a class="mdl-navigation__link uml-link" href="#">UML</a>
   </nav>
 </div>
