Добавлены метатеги для индексации и улучшена доступность

--- a/header.html
+++ b/header.html
@@ -1,35 +1,37 @@
 <header class="mdl-layout__header">
   <div class="mdl-layout__header-row">
-    <span class="mdl-layout-title">Проект</span>
+    <span class="mdl-layout-title" data-en="Project">Проект</span>
     <div class="mdl-layout-spacer"></div>
-    <nav class="mdl-navigation mdl-layout--large-screen-only">
-      <a class="mdl-navigation__link" href="index.html">Home</a>
-      <a class="mdl-navigation__link" href="api.html">API Logs</a>
-      <a class="mdl-navigation__link" href="fail2ban.html">Fail2Ban</a>
-      <a class="mdl-navigation__link" href="docs.html">Docs</a>
-      <a class="mdl-navigation__link" href="modules.html">Modules</a>
-      <a class="mdl-navigation__link" href="plan.html">Plan</a>
-      <a class="mdl-navigation__link" href="control.html">Control</a>
-      <a class="mdl-navigation__link" href="crossref.html">Crossrefs</a>
-      <a class="mdl-navigation__link" href="login.html">Login</a>
-      <a class="mdl-navigation__link" href="json_intro.html">JSON Schema</a>
-      <a class="mdl-navigation__link uml-link" href="#">UML</a>
+    <nav class="mdl-navigation mdl-layout--large-screen-only" role="navigation" aria-label="Main menu">
+      <a class="mdl-navigation__link" href="index.html" title="Home">Home</a>
+      <a class="mdl-navigation__link" href="api.html" title="API Logs">API Logs</a>
+      <a class="mdl-navigation__link" href="fail2ban.html" title="Fail2Ban">Fail2Ban</a>
+      <a class="mdl-navigation__link" href="docs.html" title="Docs">Docs</a>
+      <a class="mdl-navigation__link" href="modules.html" title="Modules">Modules</a>
+      <a class="mdl-navigation__link" href="plan.html" title="Plan">Plan</a>
+      <a class="mdl-navigation__link" href="control.html" title="Control">Control</a>
+      <a class="mdl-navigation__link" href="crossref.html" title="Crossrefs">Crossrefs</a>
+      <a class="mdl-navigation__link" href="login.html" title="Login">Login</a>
+      <a class="mdl-navigation__link" href="json_intro.html" title="JSON Schema">JSON Schema</a>
+      <a class="mdl-navigation__link uml-link" href="#" title="UML Diagram">UML</a>
+      <a class="mdl-navigation__link lang-link" href="#" title="Switch to English">EN</a>
     </nav>
   </div>
 </header>
 <div class="mdl-layout__drawer">
-  <span class="mdl-layout-title">Проект</span>
-  <nav class="mdl-navigation">
-    <a class="mdl-navigation__link" href="index.html">Home</a>
-    <a class="mdl-navigation__link" href="api.html">API Logs</a>
-    <a class="mdl-navigation__link" href="fail2ban.html">Fail2Ban</a>
-    <a class="mdl-navigation__link" href="docs.html">Docs</a>
-    <a class="mdl-navigation__link" href="modules.html">Modules</a>
-    <a class="mdl-navigation__link" href="plan.html">Plan</a>
-    <a class="mdl-navigation__link" href="control.html">Control</a>
-    <a class="mdl-navigation__link" href="crossref.html">Crossrefs</a>
-    <a class="mdl-navigation__link" href="login.html">Login</a>
-    <a class="mdl-navigation__link" href="json_intro.html">JSON Schema</a>
-    <a class="mdl-navigation__link uml-link" href="#">UML</a>
+  <span class="mdl-layout-title" data-en="Project">Проект</span>
+  <nav class="mdl-navigation" role="navigation" aria-label="Main menu">
+    <a class="mdl-navigation__link" href="index.html" title="Home">Home</a>
+    <a class="mdl-navigation__link" href="api.html" title="API Logs">API Logs</a>
+    <a class="mdl-navigation__link" href="fail2ban.html" title="Fail2Ban">Fail2Ban</a>
+    <a class="mdl-navigation__link" href="docs.html" title="Docs">Docs</a>
+    <a class="mdl-navigation__link" href="modules.html" title="Modules">Modules</a>
+    <a class="mdl-navigation__link" href="plan.html" title="Plan">Plan</a>
+    <a class="mdl-navigation__link" href="control.html" title="Control">Control</a>
+    <a class="mdl-navigation__link" href="crossref.html" title="Crossrefs">Crossrefs</a>
+    <a class="mdl-navigation__link" href="login.html" title="Login">Login</a>
+    <a class="mdl-navigation__link" href="json_intro.html" title="JSON Schema">JSON Schema</a>
+    <a class="mdl-navigation__link uml-link" href="#" title="UML Diagram">UML</a>
+    <a class="mdl-navigation__link lang-link" href="#" title="Switch to English">EN</a>
   </nav>
 </div>
