--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>hey</title>
+    <meta name="robots" content="index,follow">
+        <title>Главная - KyaMovVM</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="material.min.css">
         <script defer src="material.min.js"></script>
@@ -11,14 +12,14 @@
     <body class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <div id="header-placeholder"></div>
         <main class="mdl-layout__content container">
-            <img src="banner.svg" alt="Image" class="banner">
+            <img src="banner.svg" alt="Баннер проекта" title="KyaMovVM" class="banner">
             <div class="heart"></div>
             <div id="car-container"></div>
         </main>
         <div id="uml-overlay" class="uml-overlay">
             <div class="uml-window">
                 <h2>UML Diagram</h2>
-                <img src="uml-diagram.svg" alt="UML diagram" class="uml-img">
+                <img src="uml-diagram.svg" alt="UML diagram" title="UML diagram" class="uml-img">
                 <button onclick="toggleUml()">Close</button>
             </div>
         </div>
