--- a/crossref.html
+++ b/crossref.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index,follow">
     <title>Cross References</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="material.min.css">
@@ -37,7 +38,7 @@ function	test_list_templates	./tests/test_template_editor.py:11        </pre>
     <div id="uml-overlay" class="uml-overlay">
         <div class="uml-window">
             <h2>UML Diagram</h2>
-            <img src="uml-diagram.svg" alt="UML diagram" class="uml-img">
+            <img src="uml-diagram.svg" alt="UML diagram" title="UML diagram" class="uml-img">
             <button onclick="toggleUml()">Close</button>
         </div>
     </div>
