--- a/fail2ban.html
+++ b/fail2ban.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index,follow">
     <title>Fail2Ban Logs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="material.min.css">
@@ -21,7 +22,7 @@
     <div id="uml-overlay" class="uml-overlay">
         <div class="uml-window">
             <h2>UML Diagram</h2>
-            <img src="fail2ban-uml.svg" alt="Fail2Ban UML" class="uml-img">
+            <img src="fail2ban-uml.svg" alt="Fail2Ban UML" title="Fail2Ban UML" class="uml-img">
             <button onclick="toggleUml()">Close</button>
         </div>
     </div>
