Добавил новую страницу с описанием скрипта setup_django.sh и UML-диаграммой. Обновил меню и общую документацию.

--- a/header.html
+++ b/header.html
@@ -7,6 +7,7 @@
       <a class="mdl-navigation__link" href="api.html" title="API Logs">API Logs</a>
       <a class="mdl-navigation__link" href="fail2ban.html" title="Fail2Ban">Fail2Ban</a>
       <a class="mdl-navigation__link" href="docs.html" title="Docs">Docs</a>
+      <a class="mdl-navigation__link" href="django_setup.html" title="Django Setup">Django Setup</a>
       <a class="mdl-navigation__link" href="modules.html" title="Modules">Modules</a>
       <a class="mdl-navigation__link" href="plan.html" title="Plan">Plan</a>
       <a class="mdl-navigation__link" href="control.html" title="Control">Control</a>
@@ -25,6 +26,7 @@
     <a class="mdl-navigation__link" href="api.html" title="API Logs">API Logs</a>
     <a class="mdl-navigation__link" href="fail2ban.html" title="Fail2Ban">Fail2Ban</a>
     <a class="mdl-navigation__link" href="docs.html" title="Docs">Docs</a>
+      <a class="mdl-navigation__link" href="django_setup.html" title="Django Setup">Django Setup</a>
     <a class="mdl-navigation__link" href="modules.html" title="Modules">Modules</a>
     <a class="mdl-navigation__link" href="plan.html" title="Plan">Plan</a>
     <a class="mdl-navigation__link" href="control.html" title="Control">Control</a>
