Расширение интерактивного гайда Django

--- a/docs.html
+++ b/docs.html
@@ -35,6 +35,7 @@
         </section>
         <section>
             <h2>Django Hosting</h2>
+            <p>Подробное руководство <a href="django_setup.html">по автоматическому развёртыванию</a> содержит интерактивный Python-конфигуратор.</p>
             <p>Сайт можно разместить как приложение Django: перенесите файлы в каталог <code>static</code>, а HTML подключите как шаблоны.</p>
         </section>
         <section>
