Исправлено отображение UML на странице Django Setup

--- a/django_setup.html
+++ b/django_setup.html
@@ -51,7 +51,7 @@
     <div id="uml-overlay" class="uml-overlay">
         <div class="uml-window">
             <h2>UML Diagram</h2>
-            <img src="django_setup_uml.svg" alt="django setup uml" title="Django setup" class="uml-img">
+            <object data="django_setup_uml.svg" type="image/svg+xml" class="uml-img"></object>
             <button onclick="toggleUml()">Close</button>
         </div>
     </div>
