Add Docker Compose training game

--- a/header.html
+++ b/header.html
@@ -8,6 +8,7 @@
       <a class="mdl-navigation__link" href="fail2ban.html" title="Fail2Ban">Fail2Ban</a>
       <a class="mdl-navigation__link" href="docs.html" title="Docs">Docs</a>
       <a class="mdl-navigation__link" href="django_setup.html" title="Django Setup">Django Setup</a>
+      <a class="mdl-navigation__link" href="docker_game.html" title="Docker Game">Docker Game</a>
       <a class="mdl-navigation__link" href="modules.html" title="Modules">Modules</a>
       <a class="mdl-navigation__link" href="plan.html" title="Plan">Plan</a>
       <a class="mdl-navigation__link" href="control.html" title="Control">Control</a>
@@ -27,7 +28,8 @@
     <a class="mdl-navigation__link" href="fail2ban.html" title="Fail2Ban">Fail2Ban</a>
     <a class="mdl-navigation__link" href="docs.html" title="Docs">Docs</a>
       <a class="mdl-navigation__link" href="django_setup.html" title="Django Setup">Django Setup</a>
-    <a class="mdl-navigation__link" href="modules.html" title="Modules">Modules</a>
+      <a class="mdl-navigation__link" href="docker_game.html" title="Docker Game">Docker Game</a>
+      <a class="mdl-navigation__link" href="modules.html" title="Modules">Modules</a>
     <a class="mdl-navigation__link" href="plan.html" title="Plan">Plan</a>
     <a class="mdl-navigation__link" href="control.html" title="Control">Control</a>
     <a class="mdl-navigation__link" href="crossref.html" title="Crossrefs">Crossrefs</a>
