Дополнен план разработки

--- a/plan.html
+++ b/plan.html
@@ -29,6 +29,7 @@
 11. **Тестирование системы** – выполнены ручные проверки отображения страниц и автоматические тесты модулей.
 12. **Код‑ревью** – изменения проходят просмотр коллегами перед слиянием в основную ветку.
 13. **Корректирующее сопровождение** – в случае новых требований достаточно изменить HTML, стили или скрипт и дописать тесты.
+14. **Контейнеризация и запуск** – проект собирается в Docker‑образ, который запускает минимальное WSGI‑приложение через `gunicorn`.
 
 ## Ручные тесты
 
