Добавлен клиент Figma API и документация

--- a/docs.html
+++ b/docs.html
@@ -34,6 +34,11 @@
             <p>Complex calculations may use the <a href="https://github.com/NVIDIA/cuda-python">cuda-python</a> library.</p>
         </section>
         <section>
+            <h2>Figma API</h2>
+            <p>Скрипт <code>figma_api.py</code> позволяет читать файлы и проекты через REST.</p>
+            <p>Подробное руководство: <a href="docs/figma_api.md">docs/figma_api.md</a>.</p>
+        </section>
+        <section>
             <h2>Django Hosting</h2>
             <p>Подробное руководство <a href="django_setup.html">по автоматическому развёртыванию</a> содержит интерактивный Python-конфигуратор.</p>
             <p>Сайт можно разместить как приложение Django: перенесите файлы в каталог <code>static</code>, а HTML подключите как шаблоны.</p>
