Добавлена страница test

--- a/header.html
+++ b/header.html
@@ -14,6 +14,7 @@
       <a class="mdl-navigation__link" href="control.html" title="Control">Control</a>
       <a class="mdl-navigation__link" href="crossref.html" title="Crossrefs">Crossrefs</a>
       <a class="mdl-navigation__link" href="login.html" title="Login">Login</a>
+      <a class="mdl-navigation__link" href="test.html" title="Test">Test</a>
       <a class="mdl-navigation__link" href="json_intro.html" title="JSON Schema">JSON Schema</a>
       <a class="mdl-navigation__link uml-link" href="#" title="UML Diagram">UML</a>
       <a class="mdl-navigation__link lang-link" href="#" title="Switch to English">EN</a>
@@ -34,6 +35,7 @@
     <a class="mdl-navigation__link" href="control.html" title="Control">Control</a>
     <a class="mdl-navigation__link" href="crossref.html" title="Crossrefs">Crossrefs</a>
     <a class="mdl-navigation__link" href="login.html" title="Login">Login</a>
+    <a class="mdl-navigation__link" href="test.html" title="Test">Test</a>
     <a class="mdl-navigation__link" href="json_intro.html" title="JSON Schema">JSON Schema</a>
     <a class="mdl-navigation__link uml-link" href="#" title="UML Diagram">UML</a>
     <a class="mdl-navigation__link lang-link" href="#" title="Switch to English">EN</a>
